# News-algorithm

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  abc.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: README.md  main.py  pyproject.toml
app/: config.py  server.py
app/algorithms/: news_classifier.py  news_recommender.py  sentiment_analyzer.py  summarizer.py  translator.py
app/algorithms/text_translator/: README.md  translator.py
app/assets/: nepali_stopwords.txt
app/core/: config.py  logging.py  model.py
app/helpers/: embedding.py  preprocess.py
app/routes/: __init__.py  classifier_route.py  news_classifier.py  recommendor_route.py  sentiment_analyer_route.py  summarizer_route.py  summary.py  translator_route.py
news_algorithms/: __init__.py
news_algorithms/helper/: embedding.py
news_algorithms/nepali_sentiment_analysis/: README.md  main.py  predictor.py  pyproject.toml  transformer_model.py
news_algorithms/nepali_sentiment_analysis/nepali_sentiment_analysis/: embeddings.py  labelling.py  visualization.py
news_algorithms/nepali_sentiment_analysis/notebooks/: best_model.pth  preprocess.ipynb  transformer-v2.ipynb  transformer.ipynb  transformer_multi.ipynb
news_algorithms/nepali_sentiment_analysis/notebooks/data_cleaning/: 01-extract-neutral-data.ipynb  04-merge.ipynb  cleaned_data.csv
news_algorithms/nepali_sentiment_analysis/notebooks/model/: lstm_binary.ipynb  lstm_multi.ipynb  transformer_binary.ipynb  transformer_multi.ipynb
news_algorithms/nepali_sentiment_analysis/notebooks/modelling/: transformer.ipynb
news_algorithms/nepali_sentiment_analysis/notebooks/preprocessing/: 01-extract-neutral-data.ipynb  02-process-sentiment-analysis-final.ipynb  03-process-test-train.ipynb  04-merge.ipynb
news_algorithms/nepali_sentiment_analysis/utils/: preprocessing.py
news_algorithms/news_classifier/: README.md  classifier.py
news_algorithms/news_classifier/notebook/: README.md  classifier.ipynb  preprocess-text-files.ipynb
news_algorithms/news_classifier/notebooks/: classifier.ipynb
news_algorithms/news_recommendation/: README.md  recommender.py
news_algorithms/news_recommendation/docs/: tf-idf.md  time_decay_factor.md
news_algorithms/news_title_classifier/: pyproject.toml
news_algorithms/news_title_classifier/news_title_classifier/: predict.py  preprocess.py  test_predict.py
news_algorithms/news_title_classifier/notebooks/: a.ipynb  classifier.ipynb  nepali-title-classifier copy.ipynb  nepali-title-classifier.ipynb  preprocessing.ipynb
news_algorithms/text_summarizer/: README.md  pyproject.toml  requirements.txt  setup.py  summarizer.py  test.ipynb
news_algorithms/text_summarizer/notebooks/: embedding_processing.ipynb  summarizer-v1.ipynb  summarizer-v2.ipynb  summarizer-v3.ipynb
news_algorithms/text_summarizer/text_summarizer/: __init__.py  nepali_stopwords.txt  preprocessing.py  summarization.py  utils.py
news_algorithms/utils/: embedding.py  preprocess.py
tests/: pytest.ini  test_classifier.py  test_recommendor.py  test_translator.py
ui/: README.md  index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx  index.css
(+6 files in other folders)
