[tool.poetry]
name = "nepali-news-algorithms"
version = "0.1.0"
description = ""
authors = ["Suyash Shrestha"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gensim = "^4.3.3"
scikit-learn = "^1.6.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}
seaborn = "^0.13.2"
snowballstemmer = "^2.2.0"
pydantic-settings = "^2.6.1"
tqdm = "^4.67.1"
deep-translator = "^1.11.4"
pytest = "^8.3.4"
openpyxl = "^3.1.5"
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
rouge-score = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
