[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Suyash Shrestha <sthasuyash11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
nltk = "^3.9.1"
scikit-learn = "^1.5.2"
gensim = "^4.3.3"
nepalikit = "^1.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
