[tool.poetry]
name = "news-title-classifier"
version = "0.1.0"
description = ""
authors = ["Suyash Shrestha <sthasuyash11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.0"
numpy = "^2.1.3"
pandas = "^2.2.3"
snowballstemmer = "^2.2.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
imblearn = "^0.0"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
