[tool.poetry]
name = "text-summarizer"
version = "0.1.0"
description = ""
authors = ["Suyash Shrestha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gensim = "^4.3.3"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
